# IdeaForge

./: .env.example  .gitignore  CHANGELOG.md  PLAN.md  docker-compose.yml  package.json  pnpm-lock.yaml
apps/api/: alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: b59aaf7de816_initial_tables.py
apps/api/src/ideaforge/: __init__.py  config.py  main.py
apps/api/src/ideaforge/agents/: coordinator.py
apps/api/src/ideaforge/agents/callbacks/: ws_callback.py
apps/api/src/ideaforge/agents/config/: agents.yaml  tasks.yaml
apps/api/src/ideaforge/agents/crews/: research_crew.py
apps/api/src/ideaforge/agents/tools/: __init__.py  bluesky_tool.py  devto_tool.py  economic_tool.py  github_tool.py  google_search.py  google_trends.py  hackernews_tool.py  news_tool.py  package_trends.py  reddit_tool.py  sentiment.py  wikipedia_tool.py  youtube_tool.py
apps/api/src/ideaforge/api/: router.py
apps/api/src/ideaforge/api/v1/: agents.py  research.py  settings.py
apps/api/src/ideaforge/api/ws/: events.py  manager.py
apps/api/src/ideaforge/core/: events.py  llm_registry.py  logging.py  memory.py  token_tracker.py
apps/api/src/ideaforge/models/: __init__.py  agent.py  database.py  idea.py
apps/api/src/ideaforge/schemas/: agent.py  research.py  settings.py
apps/api/src/ideaforge/services/: research_service.py  vector_service.py
apps/web/: package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/lib/: api.ts  websocket.ts
apps/web/src/lib/i18n/: ru.ts
apps/web/src/types/: agent.ts  research.ts  settings.ts
(+15 files in other folders)
